Minor layout fix
Added new favicon, twitter link

--- a/_includes/c-footer.html
+++ b/_includes/c-footer.html
@@ -3,11 +3,11 @@
       <div class="l-container">
 
         <div class="c-footer__item social-links">
+          <a class="social-links__icon" href="https://twitter.com/pibritto" title="Email">
+            <i class="icon-twitter" aria-hidden="true"></i>
+          </a>
           <a class="social-links__icon" href="https://github.com/pedrobritto" title="GitHub">
             <i class="icon-github" aria-hidden="true"></i>
-          </a>
-          <a class="social-links__icon" href="http://codepen.io/pedrobritto/" title="Codepen">
-            <i class="icon-codeopen" aria-hidden="true"></i>
           </a>
           <a class="social-links__icon" href="https://www.linkedin.com/in/pedro-britto/" title="LinkedIn">
             <i class="icon-linkedin" aria-hidden="true"></i>
