--- a/_includes/c-head.html
+++ b/_includes/c-head.html
@@ -19,13 +19,7 @@
     <link rel="canonical" href="{{ site.url }}{{ page.url }}">
 
     <!-- Google Fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Domine|Oswald:300,700" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Cantata+One|Libre+Baskerville|Open+Sans" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Abril+Fatface|Playfair+Display" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Hind:400,700|Karla:400,700" rel="stylesheet">
-
-    <!-- Fontawesome -->
-    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Abril+Fatface|Hind:400,700" rel="stylesheet">
 
     <!-- CSS -->
     <link rel="stylesheet" href="{{ site.url }}/assets/css/styles.css">
@@ -37,12 +31,12 @@
     <link rel="icon" type="image/png" href="{{ site.url }}/assets/img/favicon/favicon-16x16.png" sizes="16x16">
     <link rel="icon" type="image/png" href="{{ site.url }}/assets/img/favicon/favicon-128.png" sizes="128x128">
     <link rel="apple-touch-icon-precomposed" sizes="57x57" href="{{ site.url }}/assets/img/favicon/apple-touch-icon-57x57.png">
-    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="{{ site.url }}/assets/img/favicon/apple-touch-icon-114x114.png">
-    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="{{ site.url }}/assets/img/favicon/apple-touch-icon-72x72.png">
-    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="{{ site.url }}/assets/img/favicon/apple-touch-icon-144x144.png">
     <link rel="apple-touch-icon-precomposed" sizes="60x60" href="{{ site.url }}/assets/img/favicon/apple-touch-icon-60x60.png">
-    <link rel="apple-touch-icon-precomposed" sizes="120x120" href="{{ site.url }}/assets/img/favicon/apple-touch-icon-120x120.png">
+    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="{{ site.url }}/assets/img/favicon/apple-touch-icon-72x72.png">
     <link rel="apple-touch-icon-precomposed" sizes="76x76" href="{{ site.url }}/assets/img/favicon/apple-touch-icon-76x76.png">
+    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="{{ site.url }}/assets/img/favicon/apple-touch-icon-114x114.png">
+    <link rel="apple-touch-icon-precomposed" sizes="120x120" href="{{ site.url }}/assets/img/favicon/apple-touch-icon-120x120.png">
+    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="{{ site.url }}/assets/img/favicon/apple-touch-icon-144x144.png">
     <link rel="apple-touch-icon-precomposed" sizes="152x152" href="{{ site.url }}/assets/img/favicon/apple-touch-icon-152x152.png">
 
     <meta name="application-name" content="Pedro Britto">
@@ -50,14 +44,14 @@
     <meta name="msapplication-TileImage" content="{{ site.url }}/assets/img/favicon/mstile-144x144.png">
     <meta name="msapplication-square70x70logo" content="{{ site.url }}/assets/img/favicon/mstile-70x70.png">
     <meta name="msapplication-square150x150logo" content="{{ site.url }}/assets/img/favicon/mstile-150x150.png">
-    <meta name="msapplication-wide310x150logo" content="{{ site.url }}/assets/img/favicon/mstile-310x150.png">
     <meta name="msapplication-square310x310logo" content="{{ site.url }}/assets/img/favicon/mstile-310x310.png">
+    <meta name="msapplication-wide310x150logo" content="{{ site.url }}/assets/img/favicon/mstile-310x150.png">
 
     <!-- OG -->
+    <meta property="og:url" content="{{ site.url }}{{ page.url }}">
     <meta property="og:title" content="{{ page.title }}">
     <meta property="og:description" content="{{ page.description }}">
     <meta property="og:image" content="{{ site.url }}/assets/img/og/pedrobritto.png">
-    <meta property="og:url" content="{{ site.url }}{{ page.url }}">
 
   </head>
 
