--- a/_sass/base/_typography.scss
+++ b/_sass/base/_typography.scss
@@ -1,7 +1,6 @@
 // Font Stacks
-$font-heading : 'Cantata One', sans-serif;
-$font-heading : 'Abril Fatface', sans-serif;
-$font-body    : 'Hind', serif;
+$font-heading : 'Abril Fatface', serif;
+$font-body    : 'Hind', ubuntu, sans-serif;
 
 
 // Typography
