--- a/_sass/components/_c-nav-bar.scss
+++ b/_sass/components/_c-nav-bar.scss
@@ -17,7 +17,6 @@
 
 .logo__text {
   line-height: 1;
-  font-family: $font-body;
-  font-weight: bold;
+  font-family: $font-heading;
   text-decoration: none;
 }
