--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -20,6 +20,7 @@
           <article class="post__content">
             <div class="meta-info__date s1">{{ page.publishdate }}</div>
             {{ content }}
+            <img src="{{ site.url }}/assets/img/pedrobritto-assinatura.svg" alt="Assinatura Pedro Britto">
           </article>
 
           <div class="post__footer">
