--- a/_sass/components/_c-post.scss
+++ b/_sass/components/_c-post.scss
@@ -41,7 +41,7 @@
 .post__content {
   padding: 3rem 0;
 
-  & p:first-of-type {
+  p:first-of-type {
     font-size: 1.2rem;
     font-weight: bold;
     font-style: italic;
