--- a/_includes/c-nav-bar.html
+++ b/_includes/c-nav-bar.html
@@ -11,8 +11,7 @@
     </nav>
 
     <div class="menu-toggle" id="menu--modal__open">
-      <i class="menu-toggle__icon fa fa-bars" aria-hidden="true"></i>
-      <!-- <div class="menu-toggle__text">Menu</div> -->
+      <i class="menu-toggle__icon icon-menu" aria-hidden="true"></i>
     </div>
 
   </div> <!-- /container -->
@@ -23,8 +22,7 @@
   <nav class="c-menu--modal__content">
 
     <div class="menu-toggle l-menu-toggle--margin u-align-right" id="menu--modal__close">
-      <i class="fa fa-times menu-toggle__icon" aria-hidden="true"></i>
-      <!-- <div class="menu-toggle__text">Fechar</div> -->
+      <i class="menu-toggle__icon icon-cancel" aria-hidden="true"></i>
     </div>
 
     <div class="menu--modal__wrapper">
