--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -30,6 +30,7 @@
 @import "objects/o-buttons";
 @import "objects/o-menu-toggle";
 @import "objects/o-page-title";
+@import "objects/o-signature";
 
 
 // Components
@@ -42,6 +43,7 @@
 @import "components/c-post";
 @import "components/c-cv";
 @import "components/c-meta-info";
+@import "components/c-portfolio";
 
 
 // Animations
