--- a/_sass/animations/_animations.scss
+++ b/_sass/animations/_animations.scss
@@ -8,3 +8,92 @@
 .a-border:hover::after {
   transform: scaleX(1);
 }
+
+@keyframes dash {
+  to {
+    stroke-dashoffset: 0;
+  }
+}
+@mixin animation-dash {
+  animation-name: dash;
+  animation-fill-mode: both;
+}
+
+// Dash signature animation
+.start {
+  .signature {
+    .p-trace {
+      stroke-dasharray: 35;
+      stroke-dashoffset: 35;
+
+      @include animation-dash;
+      animation-duration: 0.2s;
+      animation-delay: .5s;
+    }
+    .p-curve {
+      stroke-dasharray: 96;
+      stroke-dashoffset: 96;
+
+      @include animation-dash;
+      animation-duration: 0.3s;
+      animation-delay: 0.7s;
+    }
+    .b-trace {
+      stroke-dasharray: 24;
+      stroke-dashoffset: 24;
+
+      @include animation-dash;
+      animation-duration: 0.2s;
+      animation-delay: 1s;
+    }
+    .b-curve {
+      stroke-dasharray: 138;
+      stroke-dashoffset: 138;
+
+      @include animation-dash;
+      animation-timing-function: ease-in-out;
+      animation-duration: 0.5s;
+      animation-delay: 1.1s;
+    }
+    .r-i {
+      stroke-dasharray: 33;
+      stroke-dashoffset: 33;
+
+      @include animation-dash;
+      animation-duration: 0.4s;
+      animation-delay: 1.6s;
+    }
+    .i-dot {
+      stroke-dasharray: 0.7;
+      stroke-dashoffset: 0.7;
+
+      @include animation-dash;
+      animation-duration: 0.1s;
+      animation-delay: 1.9s;
+    }
+    .t-1 {
+      stroke-dasharray: 50;
+      stroke-dashoffset: 50;
+
+      @include animation-dash;
+      animation-duration: 0.2s;
+      animation-delay: 2s;
+    }
+    .t-2 {
+      stroke-dasharray: 50;
+      stroke-dashoffset: 50;
+
+      @include animation-dash;
+      animation-duration: 0.2s;
+      animation-delay: 2.2s;
+    }
+    .t-dash-o {
+      stroke-dasharray: 81;
+      stroke-dashoffset: 81;
+
+      @include animation-dash;
+      animation-duration: 0.5s;
+      animation-delay: 2.4s;
+    }
+  }
+}
