--- a/_includes/c-head.html
+++ b/_includes/c-head.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     {% if page.title %}
-      <title>{{ site.title }} | {{ page.title }}</title>
+      <title>{{ site.title }} - {{ page.title }}</title>
     {% else %}
       <title>{{ site.title }}</title>
     {% endif %}
@@ -26,30 +26,13 @@
 
     <!-- Favicons -->
     <link rel="icon" type="image/png" href="{{ site.url }}/assets/img/favicon/favicon-196x196.png" sizes="196x196">
-    <link rel="icon" type="image/png" href="{{ site.url }}/assets/img/favicon/favicon-96x96.png" sizes="96x96">
     <link rel="icon" type="image/png" href="{{ site.url }}/assets/img/favicon/favicon-32x32.png" sizes="32x32">
     <link rel="icon" type="image/png" href="{{ site.url }}/assets/img/favicon/favicon-16x16.png" sizes="16x16">
-    <link rel="icon" type="image/png" href="{{ site.url }}/assets/img/favicon/favicon-128.png" sizes="128x128">
-    <link rel="apple-touch-icon-precomposed" sizes="57x57" href="{{ site.url }}/assets/img/favicon/apple-touch-icon-57x57.png">
-    <link rel="apple-touch-icon-precomposed" sizes="60x60" href="{{ site.url }}/assets/img/favicon/apple-touch-icon-60x60.png">
-    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="{{ site.url }}/assets/img/favicon/apple-touch-icon-72x72.png">
-    <link rel="apple-touch-icon-precomposed" sizes="76x76" href="{{ site.url }}/assets/img/favicon/apple-touch-icon-76x76.png">
-    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="{{ site.url }}/assets/img/favicon/apple-touch-icon-114x114.png">
-    <link rel="apple-touch-icon-precomposed" sizes="120x120" href="{{ site.url }}/assets/img/favicon/apple-touch-icon-120x120.png">
     <link rel="apple-touch-icon-precomposed" sizes="144x144" href="{{ site.url }}/assets/img/favicon/apple-touch-icon-144x144.png">
-    <link rel="apple-touch-icon-precomposed" sizes="152x152" href="{{ site.url }}/assets/img/favicon/apple-touch-icon-152x152.png">
-
-    <meta name="application-name" content="Pedro Britto">
-    <meta name="msapplication-TileColor" content="#FFFFFF">
-    <meta name="msapplication-TileImage" content="{{ site.url }}/assets/img/favicon/mstile-144x144.png">
-    <meta name="msapplication-square70x70logo" content="{{ site.url }}/assets/img/favicon/mstile-70x70.png">
-    <meta name="msapplication-square150x150logo" content="{{ site.url }}/assets/img/favicon/mstile-150x150.png">
-    <meta name="msapplication-square310x310logo" content="{{ site.url }}/assets/img/favicon/mstile-310x310.png">
-    <meta name="msapplication-wide310x150logo" content="{{ site.url }}/assets/img/favicon/mstile-310x150.png">
 
     <!-- OG -->
     <meta property="og:url" content="{{ site.url }}{{ page.url }}">
-    <meta property="og:title" content="{{ page.title }}">
+    <meta property="og:title" content="{{ site.title }} - {{ page.title }}">
     <meta property="og:description" content="{{ page.description }}">
     <meta property="og:image" content="{{ site.url }}/assets/img/og/pedrobritto.png">
 
