--- a/_includes/c-signature.html
+++ b/_includes/c-signature.html
@@ -1,4 +1,4 @@
-<div class="js-animate">
+<div class="js-animate u-align-center">
   <svg class="signature" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 111.63805 67.900602">
       <g fill="none" stroke="#272727" stroke-width="2.00001" stroke-linecap="round" stroke-linejoin="round">
         <path class="p-trace" d="M23.9546 15.0796c-.0886 11.30213.10123 23.0295 1.08432 34.28598"/>
