--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -20,7 +20,7 @@
           <article class="post__content">
             <div class="meta-info__date s1">{{ page.publishdate }}</div>
             {{ content }}
-            <img src="{{ site.url }}/assets/img/pedrobritto-assinatura.svg" alt="Assinatura Pedro Britto">
+            {% include c-signature.html %}
           </article>
 
           <div class="post__footer">
