Minor style Fixes
Including modal menu animation

--- a/_includes/c-nav-bar.html
+++ b/_includes/c-nav-bar.html
@@ -1,5 +1,5 @@
 <div class="c-nav-bar l-nav-bar">
-  <div class="l-container">
+  <div class="l-container--nav">
     <div class="c-nav-bar__logo t6">
       <a class="logo__text" href="{{ site.url }}">Pedro Britto</a>
     </div>
