--- a/_sass/components/_c-nav-bar.scss
+++ b/_sass/components/_c-nav-bar.scss
@@ -3,7 +3,7 @@
   color: $c-secondary;
   line-height: 1;
 
-  .l-container {
+  .l-container--nav {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
