--- a/_layouts/portfolio.html
+++ b/_layouts/portfolio.html
@@ -18,7 +18,7 @@
           <h2 class="portfolio-item__title">
             <a href="{{ item.url }}">{{ item.title }}</a>
           </h2>
-          <p class="portfolio-item__subtitle">{{ item.subtitle }}</p>
+          <!-- <p class="portfolio-item__subtitle">{{ item.subtitle }}</p> -->
         </div>
       {% endfor %}
     </div>
