--- a/_sass/components/_c-menu--modal.scss
+++ b/_sass/components/_c-menu--modal.scss
@@ -17,6 +17,7 @@
 
 // Other stuff
 
+// The entire modal menu div, including dark background
 .c-menu--modal {
   display: block;
 
@@ -41,6 +42,8 @@
   }
 }
 
+// The menu itself
+
 .c-menu--modal__content {
   color: white;
   background: $c-secondary;
@@ -55,9 +58,12 @@
   bottom: 0;
   right: 0;
 
+  z-index: 999;
+
   transition: $transition-modal;
   transform: translateX(100%);
-  box-shadow: 0 0 15px rgba(black,.1);
+  box-shadow: 0 0 15px rgba(black,0);
+
 
   @include mappy-bp(small) {
     display: none;
@@ -65,6 +71,7 @@
 
   .menu--modal-is-open & {
     transform: translateX(0%);
+    box-shadow: 0 0 15px rgba(black,.1);
   }
 }
 
