--- a/_sass/components/_c-portfolio.scss
+++ b/_sass/components/_c-portfolio.scss
@@ -1,8 +1,12 @@
 .portfolio-item {
-  margin-bottom: 1.5rem;
+  margin-bottom: 2rem;
 
   &__title {
-    //
+    font-size: ms(1);
+    
+    @include mappy-bp(small) {
+      font-size: ms(2);
+    }
   }
 
   &__subtitle {
