--- a/_sass/components/_c-post.scss
+++ b/_sass/components/_c-post.scss
@@ -3,7 +3,7 @@
 }
 
 .post__hero {
-  height: 300px;
+  height: 250px;
 
   background-position: center;
   background-size: cover;
@@ -46,19 +46,19 @@
 }
 
 .post__title {
-  font-size: ms(1);
+  font-size: ms(2);
 
   @include mappy-bp(small) {
-    font-size: ms(2);
+    font-size: ms(3);
   }
 
-  @include mappy-bp(large) {
-    font-size: ms(3);
-  };
+  // @include mappy-bp(large) {
+  //   font-size: ms(4);
+  // };
 }
 
 .post__content {
-  padding: 3rem 0;
+  padding: 2rem 0;
 
   p:first-of-type {
     font-weight: bold;
