--- a/_sass/objects/_o-page-title.scss
+++ b/_sass/objects/_o-page-title.scss
@@ -1,7 +1,7 @@
 .page-title {
-  font-size: 2rem;
+  font-size: ms(2);
 
   @include mappy-bp(small) {
-    font-size: 2.488rem;
+    font-size: ms(3);
   }
 }
