--- a/_sass/variables/_others.scss
+++ b/_sass/variables/_others.scss
@@ -2,5 +2,5 @@
 $footer-height: 165px;
 $base-border: 2px solid rgba($c-primary, 0.1);
 
-$transition-modal: .3s;
+$transition-modal: .65s cubic-bezier(0.23, 1, 0.32, 1);
 $transition-default: .15s;
