another layout change
removed images from blog posts, js fix on social share, added new dark color.

--- a/_layouts/portfolio-item.html
+++ b/_layouts/portfolio-item.html
@@ -5,9 +5,10 @@
     <main class="l-main-content">
       <div class="post">
         <header>
-          <div class="post__hero post__hero--gradient">
-            <div class="hero__overlay hero__overlay--gradient">
+          <div class="post__hero post__hero">
+            <div class="hero__overlay hero__overlay">
               <div class="l-container--hero">
+                <p class="post__pre-title">Estudo de caso</p>
                 <h1 class="post__title">{{ page.title }}</h1>
               </div>
             </div>
