--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,12 +5,11 @@
     <main class="l-main-content">
       <div class="post">
         <header>
-          <div class="post__hero"
-          style="background-image: url({{ site.url }}/assets/img/posts/{{ page.image}})">
+          <div class="post__hero">
             <div class="hero__overlay">
               <div class="l-container--hero">
+                <p class="post__pre-title">Post</p>
                 <h1 class="post__title">{{ page.title }}</h1>
-                <!-- <p class="post__subtitle">{{ page.subtitle }}</p> -->
               </div>
             </div>
           </div>
