--- a/_includes/c-social-share.html
+++ b/_includes/c-social-share.html
@@ -1,7 +1,7 @@
 <div class="c-social-share">
-  <a class="c-social-share__item icon-facebook" target="_blank" rel="nofollow" href="https://www.facebook.com/sharer.php?u={{ site.url }}{{ page.url }}">
+  <a class="c-social-share__item icon-facebook social-link-facebook" target="_blank" rel="nofollow" href="https://www.facebook.com/sharer.php?u={{ site.url }}{{ page.url }}">
   </a>
-  <a class="c-social-share__item icon-twitter" target="_blank" rel="nofollow" href="https://twitter.com/intent/tweet?text={{ page.title }}:&url={{ site.url }}{{ page.url }}&via={{ site.username_twitter }}&related={{ site.username_twitter }}">
+  <a class="c-social-share__item icon-twitter social-link-twitter" target="_blank" rel="nofollow" href="https://twitter.com/intent/tweet?text={{ page.title }}:&url={{ site.url }}{{ page.url }}&via={{ site.username_twitter }}&related={{ site.username_twitter }}">
   </a>
   <button class="c-social-share__item icon-comment" id="load-disqus-comments">
   </button>
@@ -9,23 +9,19 @@
 
 <script>
 
-const social_facebook = document.querySelector('.social-facebook');
-const social_twitter = document.querySelector('.social-twitter');
-const social_linkedin = document.querySelector('.social-linkedin');
+(function() {
+  "use strict";
+  const social_facebook = document.querySelector('.social-link-facebook');
+  const social_twitter = document.querySelector('.social-link-twitter');
 
-social_facebook.addEventListener('click', function() {
-  window.open (social_facebook.href,
-    "mywindow","menubar=1,resizable=1,width=500,height=350");
-});
+  social_facebook.addEventListener('click', function() {
+    window.open (social_facebook.href, "mywindow","menubar=1,resizable=1,width=500,height=350");
+  });
 
-social_twitter.addEventListener('click', function() {
-  window.open (social_twitter.href,
-    "mywindow","menubar=1,resizable=1,width=500,height=260");
-});
+  social_twitter.addEventListener('click', function() {
+    window.open (social_twitter.href, "mywindow","menubar=1,resizable=1,width=500,height=260");
+  });
+})();
 
-social_linkedin.addEventListener('click', function() {
-  window.open (social_linkedin.href,
-    "mywindow","menubar=1,resizable=1,width=500,height=350");
-});
 
 </script>
