--- a/_sass/base/_base.scss
+++ b/_sass/base/_base.scss
@@ -61,8 +61,8 @@ blockquote {
 }
 
 code {
-  background-color: rgba(0, 0, 0, 0.05);
-  border: 1px solid rgba(0, 0, 0, 0.15);
+  background-color: rgba(black, 0.05);
+  border: 1px solid rgba(black, 0.15);
   border-radius: 3px;
   font-size: 1rem;
   margin: 0 .2rem;
