--- a/_sass/layouts/_container.scss
+++ b/_sass/layouts/_container.scss
@@ -1,4 +1,5 @@
 @mixin l-container {
+  flex: 1;
   max-width: 35em;
   margin: 0 auto;
   padding: 0 1rem;
@@ -8,8 +9,12 @@
   @include l-container;
 }
 
-.l-container--hero,
 .l-container--nav {
   @include l-container;
   max-width: 40em;
+}
+
+.l-container--hero {
+  @include l-container;
+  max-width: 37.5em;
 }
