atualizadas algumas informações

--- a/_layouts/portfolio-item.html
+++ b/_layouts/portfolio-item.html
@@ -29,8 +29,8 @@
       <div class="portfolio-footer">
         <div class="l-container">
           <a class="portfolio-footer__link"href="{{ page.next.url }}">
-            <h1 class="portfolio-footer__title">Próximo case</h1>
-            <p class="portfolio-footer__subtitle">{{ page.next.title }}</p>
+            <p class="portfolio-footer__subtitle post__pre-title">Próximo case</p>
+            <h1 class="portfolio-footer__title">{{ page.next.title }}</h1>
           </a>
         </div>
       </div>
@@ -40,8 +40,8 @@
       <div class="portfolio-footer">
         <div class="l-container">
           <a class="portfolio-footer__link"href="{{ page.previous.url }}">
-            <h1 class="portfolio-footer__title">Case anterior</h1>
-            <p class="portfolio-footer__subtitle">{{ page.previous.title }}</p>
+            <p class="portfolio-footer__subtitle post__pre-title">Case Anterior</p>
+            <h1 class="portfolio-footer__title">{{ page.previous.title }}</h1>
           </a>
         </div>
       </div>
