--- a/_sass/base/_base.scss
+++ b/_sass/base/_base.scss
@@ -64,15 +64,15 @@ code {
   background-color: rgba(black, 0.05);
   border: 1px solid rgba(black, 0.15);
   border-radius: 3px;
-  font-size: 1rem;
-  margin: 0 .2rem;
-  padding: 0.25rem .7rem;
+  font-size: 0.7rem;
+  margin: 0 .1rem;
+  padding: 0.2em .5em;
   white-space: nowrap;
 }
 
 pre > code {
   white-space: pre;
   display: block;
-  padding: 1.0rem 1.5rem;
+  padding: 0.8rem 0.7rem;
   margin: 0;
 }
