--- a/_includes/c-footer.html
+++ b/_includes/c-footer.html
@@ -2,7 +2,7 @@
     <footer class="c-footer l-footer">
       <div class="l-container">
         <div class="c-footer__item social-links">
-          <a class="social-links__icon" href="https://twitter.com/pibritto" title="Email">
+          <a class="social-links__icon" href="https://twitter.com/pibritto" title="Twitter">
             <i class="icon-twitter" aria-hidden="true"></i>
           </a>
           <a class="social-links__icon" href="https://github.com/pedrobritto" title="GitHub">
