--- a/_sass/components/_c-portfolio.scss
+++ b/_sass/components/_c-portfolio.scss
@@ -25,18 +25,18 @@
 
   &__title {
     color: white;
-    line-height: 1;
+    display: inline-block;
+    line-height: 1.3;
   }
 
   &__subtitle {
     color: white;
     line-height: 1;
-    // margin-top: 1.5rem;
     margin-bottom: 0;
     font-weight: bold;
   }
 
   &__link {
-    text-decoration: none;
+    transition: unset;
   }
 }
