--- a/_sass/components/_c-menu--modal.scss
+++ b/_sass/components/_c-menu--modal.scss
@@ -30,6 +30,7 @@
   height: 100vh;
 
   visibility: hidden;
+  opacity: 0;
   transition: $transition-modal;
 
   @include mappy-bp(small) {
@@ -38,6 +39,7 @@
 
   .menu--modal-is-open & {
     background-color: rgba(black,.7);
+    opacity: 1;
     visibility: visible;
   }
 }
@@ -49,9 +51,9 @@
   background: $c-secondary;
   font-family: $font-heading;
 
-  width: 250px;
+  width: 100vw;
   margin: 0;
-  padding: 1rem 1rem 0 2rem;
+  padding: 1rem 1rem 0 1rem;
 
   position: fixed;
   top: 0;
@@ -82,6 +84,7 @@
 
   font-size: 1.8rem;
   font-weight: normal;
+  text-align: center;
   text-decoration: underline;
   text-decoration-skip: ink;
   text-decoration-color: transparent;
