--- a/_sass/variables/_colors.scss
+++ b/_sass/variables/_colors.scss
@@ -1,14 +1,13 @@
 // Colors
 
 $c-blue: #557ae8;
-$c-pink: #F23E69;
+$c-pink: #f23e69;
 $c-dark-blue: #222226;
 
 $c-font-dark: #424242;
 $c-font-light: #fff;
 
-
 // Color Usage ————————————————————
 
 $c-primary: #313137;
-$c-secondary: $c-pink;
+$c-secondary: $c-blue;
